# agribound

./: .gitignore  .lycheeignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  MANIFEST.in  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  test-gee.yml
agribound/: __init__.py  _version.py  auth.py  cli.py  config.py  evaluate.py  ftw_arrow.py  ftw_query.py  pipeline.py  visualize.py
agribound/clients/: usgs_naip_plus.py
agribound/composites/: __init__.py  base.py  dynamic_world.py  gee.py  local.py  usgs.py
agribound/engines/: __init__.py  base.py  delineate_anything.py  dinov3.py  embedding.py  ensemble.py  finetune.py  ftw.py  geoai_field.py  prithvi.py  samgeo_engine.py
agribound/io/: __init__.py  crs.py  raster.py  vector.py
agribound/postprocess/: __init__.py  filter.py  lulc_filter.py  merge.py  polygonize.py  regularize.py  simplify.py
docs/: citation.md  contributing.md  gallery.md  index.md  installation.md
docs/api/: composites.md  config.md  engines.md  evaluate.md  io.md  pipeline.md  postprocess.md  visualize.md
docs/blog/: .authors.yml
docs/blog/posts/: introducing-agribound.md
docs/user-guide/: cli.md  configuration.md  engines.md  fine-tuning.md  ftw-query.md  gee-setup.md  quickstart.md  satellite-sources.md
examples/: 01_new_mexico_landsat_timeseries.py  02_india_ganges_sentinel2.py  03_australia_murray_darling_hls.py  04_france_beauce_sentinel2.py  05_pampas_embeddings.py  05_riodelaplata_embeddings.py  06_kenya_smallholder_ftw.py  07_usa_naip_high_res.py  08_china_north_plain_spot.py  09_ensemble_comparison.py  10_local_tif_quickstart.py  11_mississippi_alluvial_plain_spot.py  12_new_mexico_ensemble_timeseries.py  13_sam2_refine_dinov3.py  14_dinov3_sam2_ensemble.py  15_pampas_semi_supervised.py  16_usa_usgs_naip_plus.py  17_query_published_ftw_polygons.py  README.md
examples/notebooks/: 01_new_mexico_landsat_timeseries.ipynb  02_india_ganges_sentinel2.ipynb  03_australia_murray_darling_hls.ipynb  04_france_beauce_sentinel2.ipynb  05_pampas_embeddings.ipynb  05_riodelaplata_embeddings.ipynb  06_kenya_smallholder_ftw.ipynb  07_usa_naip_high_res.ipynb  08_china_north_plain_spot.ipynb  09_ensemble_comparison.ipynb  10_local_tif_quickstart.ipynb  11_mississippi_alluvial_plain_spot.ipynb  12_new_mexico_ensemble_timeseries.ipynb  13_sam2_refine_dinov3.ipynb  14_dinov3_sam2_ensemble.ipynb  15_pampas_semi_supervised.ipynb  16_usa_usgs_naip_plus.ipynb  17_query_published_ftw_polygons.ipynb
outputs/new_mexico_ensemble/: nm_study_area.geojson
paper/: paper.bib  paper.md
tests/: conftest.py
tests/integration/: test_cli.py  test_pipeline_local.py  test_pipeline_usgs_mocked.py
tests/unit/: test_config.py  test_engine_registry.py  test_evaluate.py  test_ftw_query.py  test_io_crs.py  test_io_raster.py  test_io_vector.py  test_lulc_filter.py  test_postprocess.py  test_usgs_naip_plus_builder.py  test_usgs_naip_plus_client.py
